--- a/app/src/main/res/drawable/rounded_title_blue.xml
+++ b/app/src/main/res/drawable/rounded_title_blue.xml
@@ -5,7 +5,7 @@
     <corners
         android:topLeftRadius="20dp"
         android:topRightRadius="20dp"/>
-    <solid android:color="#001D85"/>
+    <solid android:color="#0060AC"/>
     <padding
         android:bottom="5dp"
         android:left="10dp"
