--- a/app/src/main/res/layout/activity_admin_dashboard.xml
+++ b/app/src/main/res/layout/activity_admin_dashboard.xml
@@ -29,6 +29,8 @@
         android:layout_marginBottom="32dp"
         android:src="@drawable/ic_add_white"
         app:fabSize="normal"
+        android:backgroundTint="@color/colorPrimary"
+        app:tint="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_view"
         app:layout_constraintStart_toStartOf="parent" />
 
