--- a/app/src/main/res/layout/activity_insert_member.xml
+++ b/app/src/main/res/layout/activity_insert_member.xml
@@ -26,27 +26,59 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="80dp"
-                android:text="INSERT USER"
+                android:text="ADD MEMBER"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.502"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:fontFamily="sans-serif-black"
+                android:textColor="@color/colorPrimary"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="200dp"
+                android:layout_marginEnd="8dp"
+                android:src="@drawable/ic_person_blue"
+                app:layout_constraintEnd_toStartOf="@id/tv_userid"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="292dp"
+                android:layout_marginEnd="8dp"
+                android:src="@drawable/ic_lock_blue"
+                app:layout_constraintEnd_toStartOf="@id/tv_password"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="384dp"
+                android:layout_marginEnd="8dp"
+                android:src="@drawable/ic_font_download_blue"
+                app:layout_constraintEnd_toStartOf="@id/tv_name"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/tv_userid"
-                android:layout_width="300dp"
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
                 android:hint="UserId"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.621"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_title">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/et_userId"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="40dp"
                     android:background="@android:color/transparent"
                     android:inputType="textPassword"
                     android:text="@={user.userId}" />
@@ -54,10 +86,9 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/tv_password"
-                android:layout_width="300dp"
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
-                android:layout_marginTop="20dp"
                 android:hint="Password"
                 app:layout_constraintStart_toStartOf="@id/tv_userid"
                 app:layout_constraintTop_toBottomOf="@id/tv_userid"
@@ -67,6 +98,7 @@
                     android:id="@+id/et_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
                     android:background="@android:color/transparent"
                     android:inputType="textPassword"
                     android:text="@={user.password}" />
@@ -74,10 +106,9 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/tv_name"
-                android:layout_width="300dp"
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
-                android:layout_marginTop="20dp"
                 android:hint="Name"
                 app:layout_constraintStart_toStartOf="@id/tv_userid"
                 app:layout_constraintTop_toBottomOf="@id/tv_password"
@@ -89,6 +120,7 @@
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
                     android:inputType="textPassword"
+                    android:layout_marginTop="30dp"
                     android:text="@={user.name}" />
             </com.google.android.material.textfield.TextInputLayout>
 
