--- a/app/src/main/res/layout/activity_training_data.xml
+++ b/app/src/main/res/layout/activity_training_data.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:opencv="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -19,8 +19,7 @@
         android:layout_height="wrap_content"
         android:src="@drawable/ic_camera"
         android:id="@+id/btn_Capture"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:visibility="gone"
-        />
+        android:visibility="gone"/>
 </RelativeLayout>
