--- a/app/src/main/res/layout/confirmation_dialog_layout.xml
+++ b/app/src/main/res/layout/confirmation_dialog_layout.xml
@@ -13,11 +13,11 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="LOGOUT CONFIRMATION"
+            android:text="Logout Confirmation"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@color/white"
-            android:textSize="24dp" />
+            android:textSize="20dp" />
 
     </FrameLayout>
 
@@ -33,16 +33,16 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="ARE YOU SURE YOU WANT"
+            android:text="Are You Sure You Want To"
             android:textAlignment="center"
             android:layout_marginTop="10dp"
             android:textStyle="bold" />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TO LOG OUT?"
+            android:text="Log Oout?"
             android:textAlignment="center"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:layout_marginBottom="20dp"
             android:textStyle="bold" />
 
