--- a/app/src/main/res/layout/history_list.xml
+++ b/app/src/main/res/layout/history_list.xml
@@ -11,6 +11,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <androidx.cardview.widget.CardView
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:id="@+id/card_view_dosen"
@@ -20,53 +21,95 @@
             card_view:cardElevation="3dp"
             card_view:cardUseCompatPadding="true"
             android:layout_marginTop="5dp">
-    
-            <LinearLayout
+
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:orientation="vertical"
-                android:padding="5dp">
-                <TextView
-                    android:id="@+id/txt_year"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@={historyData.outputDate}"
-                    android:textAlignment="center"
-                    android:textStyle="bold" />
+                android:layout_height="match_parent">
 
                 <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:id="@+id/status_frame"
+                    android:layout_width="40dp"
+                    android:layout_height="55dp"
+                    card_view:layout_constraintTop_toTopOf="parent"
+                    card_view:layout_constraintStart_toStartOf="parent"/>
 
-                    <LinearLayout
+                <FrameLayout
+                    android:id="@+id/date_frame"
+                    android:layout_width="200dp"
+                    android:background="@drawable/layout_border"
+                    android:layout_height="30dp"
+                    card_view:layout_constraintStart_toEndOf="@+id/status_frame"
+                    card_view:layout_constraintTop_toTopOf="@+id/status_frame">
+                    <TextView
+                        android:id="@+id/txt_year"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-                        <TextView
-                            android:id="@+id/txt_checkin"
-                            android:layout_width="180dp"
-                            android:layout_height="wrap_content"
-                            android:text="@={historyData.outputTimeIn}"
-                            android:gravity="center"
-                            android:background="@drawable/rounded_bottom_green"
-                            android:textColor="@color/white"
-                            android:textStyle="bold"/>
-                        <TextView
-                            android:id="@+id/txt_checkout"
-                            android:layout_width="180dp"
-                            android:layout_height="wrap_content"
-                            android:text="@={historyData.outputTimeOut}"
-                            android:gravity="center"
-                            android:background="@drawable/rounded_bottom_red"
-                            android:textColor="@color/white"
-                            android:textStyle="bold"/>
-
-                    </LinearLayout>
-
+                        android:text="@={historyData.outputDate}"
+                        android:textStyle="bold"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginStart="40dp"
+                        android:drawableStart="@drawable/ic_date"/>
                 </FrameLayout>
 
-            </LinearLayout>
+                <FrameLayout
+                    android:id="@+id/time_in_frame"
+                    android:layout_width="70dp"
+                    android:layout_height="30dp"
+                    card_view:layout_constraintStart_toEndOf="@+id/date_frame"
+                    card_view:layout_constraintTop_toTopOf="@+id/date_frame"
+                    android:background="@drawable/layout_border">
+
+                    <TextView
+                        android:id="@+id/txt_checkin"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@={historyData.outputTimeIn}"
+                        android:gravity="center"
+                        android:textAlignment="center"
+                        android:textStyle="bold"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginStart="15dp"/>
+                </FrameLayout>
+
+                <FrameLayout
+                    android:id="@+id/time__out_frame"
+                    android:layout_width="70dp"
+                    android:layout_height="30dp"
+                    card_view:layout_constraintStart_toEndOf="@+id/time_in_frame"
+                    card_view:layout_constraintTop_toTopOf="@+id/date_frame"
+                    android:background="@drawable/layout_border">
+                    <TextView
+                        android:id="@+id/txt_checkout"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@={historyData.outputTimeOut}"
+                        android:gravity="center"
+                        android:textStyle="bold"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginStart="15dp"/>
+                </FrameLayout>
+
+                <FrameLayout
+                    android:id="@+id/status_desc_frame"
+                    android:layout_width="340dp"
+                    android:layout_height="25dp"
+                    card_view:layout_constraintStart_toStartOf="@+id/date_frame"
+                    card_view:layout_constraintTop_toBottomOf="@+id/date_frame"
+                    android:background="@drawable/layout_border">
+
+                    <TextView
+                        android:id="@+id/txt_output_desc"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@={historyData.outputDesc}"
+                        android:gravity="center"
+                        android:textStyle="bold"
+                        android:layout_marginTop="2dp"/>
+                </FrameLayout>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
         </androidx.cardview.widget.CardView>
     
