--- a/app/src/main/res/menu/navigation_bottom_view.xml
+++ b/app/src/main/res/menu/navigation_bottom_view.xml
@@ -8,7 +8,7 @@
     <item
         android:id="@+id/navigation_check_in"
         android:icon="@drawable/ic_check_circle"
-        android:title="Check-In"/>
+        android:title="Attendance"/>
 
     <item
         android:id="@+id/navigation_setting"
