Change Id Override, Change Layout Setting

--- a/app/src/main/res/layout/activity_admin_dashboard.xml
+++ b/app/src/main/res/layout/activity_admin_dashboard.xml
@@ -27,7 +27,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginStart="312dp"
         android:layout_marginBottom="32dp"
-        android:src="@drawable/ic_add_white"
+        android:src="@drawable/ic_person_add"
         app:fabSize="normal"
         android:backgroundTint="@color/colorPrimary"
         app:tint="@color/white"
