--- a/app/src/main/res/layout/override_list.xml
+++ b/app/src/main/res/layout/override_list.xml
@@ -147,7 +147,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintCircleRadius="50dp"
                 app:layout_constraintStart_toEndOf="@+id/btn_accept"
-                android:onClick="@{()->onClick.onClickRejectButoon(overrideItem)}"/>
+                android:onClick="@{()->onClick.onClickRejectButton(overrideItem)}"/>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
