--- a/app/src/main/res/layout/activity_insert_member.xml
+++ b/app/src/main/res/layout/activity_insert_member.xml
@@ -79,8 +79,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="40dp"
+                    android:inputType="text"
                     android:background="@android:color/transparent"
-                    android:inputType="textPassword"
                     android:text="@={user.userId}" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -119,7 +119,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
-                    android:inputType="textPassword"
+                    android:inputType="text"
                     android:layout_marginTop="30dp"
                     android:text="@={user.name}" />
             </com.google.android.material.textfield.TextInputLayout>
