--- a/app/src/main/res/layout/frament_setting_gridview.xml
+++ b/app/src/main/res/layout/frament_setting_gridview.xml
@@ -23,7 +23,7 @@
                 android:src="@drawable/ic_settings"
                 android:layout_marginStart="175dp"/>
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="SETTING"
                 android:textSize="30sp"
@@ -52,7 +52,7 @@
                 android:layout_marginStart="40dp"
                 android:layout_marginTop="20dp"/>
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="SYNC DATA"
                 android:textSize="20sp"
@@ -81,7 +81,7 @@
                 android:layout_marginStart="40dp"
                 android:layout_marginTop="20dp"/>
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="LOG OUT"
                 android:textSize="20sp"
@@ -138,7 +138,7 @@
                 android:layout_marginStart="40dp"
                 android:layout_marginTop="20dp"/>
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="DOWNLOAD DATA"
                 android:textSize="20sp"
