--- a/app/src/main/res/drawable/cardview_backgorund_white.xml
+++ b/app/src/main/res/drawable/cardview_backgorund_white.xml
@@ -5,11 +5,14 @@
 
     <corners
         android:radius="10dp"/>
-    <solid android:color="@color/colorPrimary" />
+    <solid android:color="@color/white" />
     <padding
         android:bottom="5dp"
         android:left="10dp"
         android:right="10dp"
         android:top="5dp"/>
+    <stroke
+        android:width="4dp"
+        android:color="@color/colorPrimary"/>
 
 </shape>
