--- a/app/src/main/res/layout/fragment_check_in.xml
+++ b/app/src/main/res/layout/fragment_check_in.xml
@@ -23,7 +23,7 @@
             android:layout_marginEnd="76dp"
             android:layout_marginBottom="128dp"
             android:onClick="@{()->onClick.onClickOutButton(check)}"
-            android:text="OUT"
+            android:text="KELUAR"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="76dp"
             android:onClick="@{()->onClick.onClickInButton(check)}"
-            android:text="IN"
+            android:text="MASUK"
             app:layout_constraintBottom_toBottomOf="@+id/btn_out"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/btn_out"
@@ -54,7 +54,7 @@
             android:layout_marginBottom="184dp"
             android:background="@drawable/rounded_button"
             android:onClick="@{()->onClick.onClickOverrideButton()}"
-            android:text="REQUEST OVERRIDE"
+            android:text="AJUKAN OVERRIDE"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -68,7 +68,7 @@
             android:layout_marginStart="161dp"
             android:layout_marginTop="80dp"
             android:layout_marginEnd="162dp"
-            android:text="ABSENSI"
+            android:text="PRESENSI"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
