--- a/app/src/main/res/layout/frament_setting_gridview.xml
+++ b/app/src/main/res/layout/frament_setting_gridview.xml
@@ -25,11 +25,11 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="SETTING"
+                android:text="PENGATURAN"
                 android:textSize="30sp"
                 android:textColor="@color/white"
                 android:textStyle="bold"
-                android:layout_marginStart="140dp"
+                android:layout_marginStart="100dp"
                 android:layout_marginTop="50dp"/>
         </FrameLayout>
 
@@ -42,6 +42,8 @@
             android:layout_marginStart="50dp"
             android:layout_marginTop="120dp"
             android:background="@drawable/cardview_backgorund_white"
+            app:strokeColor="@color/colorPrimary"
+            app:strokeWidth="3dp"
             android:onClick="@{()->onClick.onClickSyncButton()}">
 
             <ImageView
@@ -54,12 +56,13 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="SYNC DATA"
+                android:text="TRAINING DATA"
                 android:textSize="20sp"
                 android:textColor="@color/colorPrimary"
                 android:textStyle="bold"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="100dp"/>
+                android:textAlignment="center"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="86dp"/>
 
         </com.google.android.material.card.MaterialCardView>
 
@@ -71,6 +74,8 @@
             app:layout_constraintStart_toStartOf="@id/cv_change_password"
             android:layout_marginTop="40dp"
             android:background="@drawable/cardview_backgorund_white"
+            app:strokeColor="@color/colorPrimary"
+            app:strokeWidth="3dp"
             android:onClick="@{()->onClick.onClickLogOutButton()}">
 
             <ImageView
@@ -100,6 +105,8 @@
             app:layout_constraintStart_toEndOf="@id/cv_sycn"
             android:layout_marginStart="20dp"
             android:background="@drawable/cardview_backgorund_white"
+            app:strokeColor="@color/colorPrimary"
+            app:strokeWidth="3dp"
             android:onClick="@{()->onClick.onClickChangePasswordButton()}">
 
             <ImageView
@@ -112,7 +119,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="CHANGE PASSWORD"
+                android:text="UBAH PASSWORD"
                 android:textSize="20sp"
                 android:textAlignment="center"
                 android:textColor="@color/colorPrimary"
@@ -129,6 +136,8 @@
             app:layout_constraintStart_toStartOf="@id/cv_sycn"
             app:layout_constraintTop_toTopOf="@+id/cv_log_out"
             android:background="@drawable/cardview_backgorund_white"
+            app:strokeColor="@color/colorPrimary"
+            app:strokeWidth="3dp"
             android:onClick="@{()->onClick.onClickDownloadButton()}">
 
             <ImageView
@@ -141,11 +150,12 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="DOWNLOAD DATA"
-                android:textSize="20sp"
+                android:text="UPLOAD DATA"
+                android:textSize="18sp"
                 android:textAlignment="center"
                 android:textColor="@color/colorPrimary"
                 android:textStyle="bold"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="80dp"/>
 
         </com.google.android.material.card.MaterialCardView>
