--- a/app/src/main/res/layout/logout_confirmation_layout.xml
+++ b/app/src/main/res/layout/logout_confirmation_layout.xml
@@ -13,7 +13,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Logout Confirmation"
+            android:text="Konfirmasi Log Out"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@color/white"
@@ -33,14 +33,14 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Are You Sure You Want To"
+            android:text="Apakah Anda Yakin Ingin"
             android:textAlignment="center"
             android:layout_marginTop="10dp"
             android:textStyle="bold" />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Log Oout?"
+            android:text="Log Out?"
             android:textAlignment="center"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="20dp"
@@ -60,20 +60,20 @@
                     android:textColor="@color/white"
                     android:drawableLeft="@drawable/ic_yes"
                     android:clickable="true"
-                    android:text="Yes"
+                    android:text="Ya"
                     android:textStyle="bold"
                     android:layout_marginRight="20dp"/>
 
                 <Button
                     android:id="@+id/btn_no"
-                    android:layout_width="100dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:background="@drawable/rounded_button"
                     android:textColor="@color/white"
                     android:drawableLeft="@drawable/ic_no"
                     android:clickable="true"
-                    android:text="No"
+                    android:text="Tidak"
                     android:textStyle="bold" />
             </LinearLayout>
 
