--- a/app/src/main/res/menu/bottom_navigation_admin.xml
+++ b/app/src/main/res/menu/bottom_navigation_admin.xml
@@ -8,7 +8,7 @@
     <item
         android:id="@+id/navigation_user"
         android:icon="@drawable/ic_user"
-        android:title="User"/>
+        android:title="Pengguna"/>
 
     <item
         android:id="@+id/navigation_log_out"
