--- a/app/src/main/res/menu/navigation_bottom_view.xml
+++ b/app/src/main/res/menu/navigation_bottom_view.xml
@@ -3,16 +3,16 @@
     <item
         android:id="@+id/navigation_history"
         android:icon="@drawable/ic_history"
-        android:title="History"/>
+        android:title="Riwayat"/>
 
     <item
         android:id="@+id/navigation_check_in"
         android:icon="@drawable/ic_check_circle"
-        android:title="Attendance"/>
+        android:title="Presensi"/>
 
     <item
         android:id="@+id/navigation_setting"
         android:icon="@drawable/ic_settings"
-        android:title="Setting"/>
+        android:title="Pengaturan"/>
 
 </menu>
