--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#100057</color>
     <color name="colorAccent">#139EE8</color>
     <color name="white">#FFF</color>
-    <color name="green">#53F300</color>
-    <color name="red">#D90E00</color>
+    <color name="green">#009933</color>
+    <color name="red">#990000</color>
     <color name="yellow">#FFA500</color>
 </resources>
