--- a/app/src/main/res/layout/change_password_layout.xml
+++ b/app/src/main/res/layout/change_password_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
@@ -18,11 +19,10 @@
             android:id="@+id/tv_password"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:hint="New Password"
-            android:layout_marginBottom="50dp"
+            android:hint="Password Baru"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/btnSubmit">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_password"
@@ -37,13 +37,13 @@
             android:id="@+id/btnSubmit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="128dp"
-            android:layout_marginEnd="134dp"
             android:onClick="@{()->onClick.onClickSubmitButton(user)}"
-            android:text="SUBMIT"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:text="KIRIM"
+            app:layout_constraintTop_toBottomOf="@id/tv_password"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.54"
+            android:layout_marginTop="30dp"
             app:layout_constraintStart_toStartOf="parent"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
