--- a/app/src/main/res/layout/activity_member_dashboard.xml
+++ b/app/src/main/res/layout/activity_member_dashboard.xml
@@ -25,6 +25,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/navigation_bottom_view" />
+        app:menu="@menu/navigation_bottom_view"
+        app:labelVisibilityMode="labeled"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
