--- a/app/src/main/res/layout/update_user_layout.xml
+++ b/app/src/main/res/layout/update_user_layout.xml
@@ -30,7 +30,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
-                android:text="@={user.userId}" />
+                android:text="@={user.userId}"
+                android:editable="false"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
