--- a/app/src/main/res/drawable/cardview_backgorund_white.xml
+++ b/app/src/main/res/drawable/cardview_backgorund_white.xml
@@ -12,7 +12,7 @@
         android:right="10dp"
         android:top="5dp"/>
     <stroke
-        android:width="4dp"
-        android:color="@color/colorPrimary"/>
+        android:width="1dp"
+        android:color="#d3d3d3"/>
 
 </shape>
