--- a/app/src/main/res/layout/change_password_layout.xml
+++ b/app/src/main/res/layout/change_password_layout.xml
@@ -16,13 +16,31 @@
         android:layout_height="wrap_content">
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tv_password"
+            android:id="@+id/tv_name"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:hint="Password Baru"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:inputType="textPassword"
+                android:text="@={user.name}" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tv_password"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:hint="Password Baru"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@+id/tv_name"
+            app:layout_constraintStart_toStartOf="@+id/tv_name">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_password"
