--- a/app/src/main/res/layout/fragment_check_in.xml
+++ b/app/src/main/res/layout/fragment_check_in.xml
@@ -62,6 +62,18 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
+            android:id="@+id/tv_remider"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Silahkan Sinkronisasi Data Terlebih Dahulu!"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/btn_override"
+            android:layout_marginBottom="10dp"
+            android:textColor="@color/red"
+            android:textStyle="bold"/>
+
+        <TextView
             android:id="@+id/tv_chek_in"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -73,6 +85,16 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/tv_chek_in"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="10dp"/>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
