--- a/app/src/main/res/layout/frament_setting_gridview.xml
+++ b/app/src/main/res/layout/frament_setting_gridview.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
+<layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
@@ -43,7 +43,7 @@
             android:layout_marginTop="120dp"
             android:background="@drawable/cardview_backgorund_white"
             app:strokeColor="@color/colorPrimary"
-            app:strokeWidth="3dp"
+            app:strokeWidth="1dp"
             android:onClick="@{()->onClick.onClickSyncButton()}">
 
             <ImageView
@@ -56,12 +56,12 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TRAINING DATA"
+                android:text="Sinkronisasi Data"
                 android:textSize="20sp"
                 android:textColor="@color/colorPrimary"
                 android:textStyle="bold"
                 android:textAlignment="center"
-                android:layout_marginStart="10dp"
+                android:layout_marginStart="5dp"
                 android:layout_marginTop="86dp"/>
 
         </com.google.android.material.card.MaterialCardView>
@@ -70,30 +70,32 @@
             android:id="@+id/cv_log_out"
             android:layout_width="140dp"
             android:layout_height="140dp"
-            app:layout_constraintTop_toBottomOf="@+id/cv_change_password"
-            app:layout_constraintStart_toStartOf="@id/cv_change_password"
-            android:layout_marginTop="40dp"
+            android:layout_marginStart="132dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/cardview_backgorund_white"
+            android:onClick="@{()->onClick.onClickLogOutButton()}"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cv_change_password"
             app:strokeColor="@color/colorPrimary"
-            app:strokeWidth="3dp"
-            android:onClick="@{()->onClick.onClickLogOutButton()}">
+            app:strokeWidth="1dp">
 
             <ImageView
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:src="@drawable/ic_exit_to_app"
-                android:tint="@color/colorPrimary"
                 android:layout_marginStart="40dp"
-                android:layout_marginTop="20dp"/>
+                android:layout_marginTop="20dp"
+                android:src="@drawable/ic_exit_to_app"
+                android:tint="@color/colorPrimary" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="LOG OUT"
-                android:textSize="20sp"
-                android:textColor="@color/colorPrimary"
-                android:textStyle="bold"
                 android:layout_marginStart="35dp"
-                android:layout_marginTop="100dp"/>
+                android:layout_marginTop="100dp"
+                android:text="Log Out"
+                android:textColor="@color/colorPrimary"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
         </com.google.android.material.card.MaterialCardView>
 
@@ -102,11 +104,12 @@
             android:layout_width="140dp"
             android:layout_height="140dp"
             app:layout_constraintTop_toTopOf="@id/cv_sycn"
-            app:layout_constraintStart_toEndOf="@id/cv_sycn"
+            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginStart="20dp"
+            android:layout_marginEnd="50dp"
             android:background="@drawable/cardview_backgorund_white"
             app:strokeColor="@color/colorPrimary"
-            app:strokeWidth="3dp"
+            app:strokeWidth="1dp"
             android:onClick="@{()->onClick.onClickChangePasswordButton()}">
 
             <ImageView
@@ -119,45 +122,15 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="UBAH PASSWORD"
+                android:text="Ubah Password"
                 android:textSize="20sp"
                 android:textAlignment="center"
                 android:textColor="@color/colorPrimary"
                 android:textStyle="bold"
-                android:layout_marginStart="10dp"
+                android:layout_marginStart="5dp"
                 android:layout_marginTop="80dp"/>
 
         </com.google.android.material.card.MaterialCardView>
 
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/cv_download_data"
-            android:layout_width="140dp"
-            android:layout_height="140dp"
-            app:layout_constraintStart_toStartOf="@id/cv_sycn"
-            app:layout_constraintTop_toTopOf="@+id/cv_log_out"
-            android:background="@drawable/cardview_backgorund_white"
-            app:strokeColor="@color/colorPrimary"
-            app:strokeWidth="3dp"
-            android:onClick="@{()->onClick.onClickDownloadButton()}">
-
-            <ImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:src="@drawable/ic_cloud_download"
-                android:tint="@color/colorPrimary"
-                android:layout_marginStart="40dp"
-                android:layout_marginTop="20dp"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="UPLOAD DATA"
-                android:textSize="18sp"
-                android:textAlignment="center"
-                android:textColor="@color/colorPrimary"
-                android:textStyle="bold"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="80dp"/>
-
-        </com.google.android.material.card.MaterialCardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
