--- a/app/src/main/res/layout/change_password_layout.xml
+++ b/app/src/main/res/layout/change_password_layout.xml
@@ -19,7 +19,7 @@
             android:id="@+id/tv_name"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:hint="Password Baru"
+            android:hint="Nama Baru"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
