--- a/app/src/main/res/layout/activity_insert_member.xml
+++ b/app/src/main/res/layout/activity_insert_member.xml
@@ -26,7 +26,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="80dp"
-                android:text="ADD MEMBER"
+                android:text="Tambah Member"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.502"
@@ -68,7 +68,7 @@
                 android:id="@+id/tv_userid"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
-                android:hint="UserId"
+                android:hint="User ID"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.621"
                 app:layout_constraintStart_toStartOf="parent"
@@ -109,7 +109,7 @@
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
-                android:hint="Name"
+                android:hint="Nama"
                 app:layout_constraintStart_toStartOf="@id/tv_userid"
                 app:layout_constraintTop_toBottomOf="@id/tv_password"
                 app:layout_constraintVertical_bias="0.362">
@@ -129,7 +129,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="@{()->clickListener.onClickInsertListener(user)}"
-                android:text="ADD"
+                android:text="Tambah"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_name"
