--- a/app/src/main/res/layout/override_list.xml
+++ b/app/src/main/res/layout/override_list.xml
@@ -36,12 +36,20 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tv_date_text"
+                android:id="@+id/tv_name_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="DATE"
                 app:layout_constraintStart_toStartOf="@+id/tv_userid_text"
                 app:layout_constraintTop_toBottomOf="@+id/tv_userid_text" />
+
+            <TextView
+                android:id="@+id/tv_date_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="DATE"
+                app:layout_constraintStart_toStartOf="@+id/tv_name_text"
+                app:layout_constraintTop_toBottomOf="@+id/tv_name_text" />
 
             <TextView
                 android:id="@+id/tv_time_text"
@@ -100,12 +108,20 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                android:id="@+id/tv_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@={overrideItem.name}"
+                app:layout_constraintStart_toStartOf="@+id/tv_userid"
+                app:layout_constraintTop_toBottomOf="@+id/tv_userid" />
+
+            <TextView
                 android:id="@+id/tv_password"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@={overrideItem.dates}"
-                app:layout_constraintStart_toStartOf="@+id/tv_userid"
-                app:layout_constraintTop_toBottomOf="@+id/tv_userid" />
+                app:layout_constraintStart_toStartOf="@+id/tv_name"
+                app:layout_constraintTop_toBottomOf="@+id/tv_name" />
 
             <TextView
                 android:id="@+id/tv_time"
