--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,7 +30,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="340dp"
+            android:layout_marginTop="290dp"
             android:layout_marginEnd="8dp"
             android:src="@drawable/ic_person_blue"
             app:layout_constraintEnd_toStartOf="@id/tv_userid"
@@ -39,7 +39,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="420dp"
+            android:layout_marginTop="370dp"
             android:layout_marginEnd="8dp"
             android:src="@drawable/ic_lock_blue"
             app:layout_constraintEnd_toStartOf="@id/tv_password"
@@ -49,7 +49,6 @@
             android:id="@+id/tv_userid"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
             android:layout_marginStart="90dp"
             android:hint="@string/shr_hint_userid"
             app:layout_constraintStart_toStartOf="parent"
@@ -97,5 +96,15 @@
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_password" />
+
+        <TextView
+            android:id="@+id/tv_reset"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Lupa Password? Klik Disini"
+            android:layout_marginTop="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn_login"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
