--- a/app/src/main/res/layout/frament_setting.xml
+++ b/app/src/main/res/layout/frament_setting.xml
@@ -16,21 +16,33 @@
             android:layout_height="180dp"
             android:background="@color/colorPrimary"
             app:layout_constraintTop_toTopOf="parent">
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/ic_settings"
-                android:layout_marginStart="175dp"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="PENGATURAN"
-                android:textSize="30sp"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                android:layout_marginStart="100dp"
-                android:layout_marginTop="50dp"/>
+                <ImageView
+                    android:id="@+id/pic_setting"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/ic_settings"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="20dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="PENGATURAN"
+                    android:textSize="30sp"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/pic_setting" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
         </FrameLayout>
 
         <com.google.android.material.card.MaterialCardView
@@ -70,11 +82,11 @@
             android:id="@+id/cv_log_out"
             android:layout_width="140dp"
             android:layout_height="140dp"
-            android:layout_marginStart="132dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/cardview_backgorund_white"
             android:onClick="@{()->onClick.onClickLogOutButton()}"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cv_change_password"
             app:strokeColor="@color/colorPrimary"
             app:strokeWidth="1dp">
@@ -104,9 +116,8 @@
             android:layout_width="140dp"
             android:layout_height="140dp"
             app:layout_constraintTop_toTopOf="@id/cv_sycn"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/cv_sycn"
             android:layout_marginStart="20dp"
-            android:layout_marginEnd="50dp"
             android:background="@drawable/cardview_backgorund_white"
             app:strokeColor="@color/colorPrimary"
             app:strokeWidth="1dp"
@@ -122,7 +133,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Ubah Password"
+                android:text="Ubah Profil"
                 android:textSize="20sp"
                 android:textAlignment="center"
                 android:textColor="@color/colorPrimary"
