--- a/app/src/main/res/layout/layout_change_profile.xml
+++ b/app/src/main/res/layout/layout_change_profile.xml
@@ -29,7 +29,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
-                android:inputType="textPassword"
                 android:text="@={user.name}" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -56,7 +55,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="@{()->onClick.onClickSubmitButton(user)}"
-            android:text="KIRIM"
+            android:text="Kirim"
             app:layout_constraintTop_toBottomOf="@id/tv_password"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="30dp"
