--- a/app/src/main/res/layout/layout_override_request.xml
+++ b/app/src/main/res/layout/layout_override_request.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="44dp"
             android:layout_marginBottom="84dp"
-            android:text="DATE"
+            android:text="Tanggal"
             app:layout_constraintBottom_toTopOf="@id/btn_request"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -30,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="30dp"
-            android:text="STATUS"
+            android:text="Status"
             app:layout_constraintBottom_toTopOf="@id/tv_password"
             app:layout_constraintStart_toStartOf="@+id/tv_password"
             app:layout_constraintTop_toTopOf="parent"
@@ -41,7 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="36dp"
-            android:text="TIME"
+            android:text="Waktu"
             app:layout_constraintStart_toStartOf="@+id/tv_password"
             app:layout_constraintTop_toBottomOf="@id/tv_password" />
 
