--- a/app/src/main/res/layout/list_override.xml
+++ b/app/src/main/res/layout/list_override.xml
@@ -14,7 +14,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view_dosen"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         app:cardCornerRadius="6dp"
         app:cardElevation="3dp"
         app:cardUseCompatPadding="true"
@@ -31,7 +31,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:text="USER ID "
+                android:text="User ID "
+                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -39,7 +40,8 @@
                 android:id="@+id/tv_name_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="DATE"
+                android:text="Nama"
+                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@+id/tv_userid_text"
                 app:layout_constraintTop_toBottomOf="@+id/tv_userid_text" />
 
@@ -47,7 +49,8 @@
                 android:id="@+id/tv_date_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="DATE"
+                android:text="Tanggal"
+                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@+id/tv_name_text"
                 app:layout_constraintTop_toBottomOf="@+id/tv_name_text" />
 
@@ -55,7 +58,8 @@
                 android:id="@+id/tv_time_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TIME"
+                android:text="Jam"
+                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@+id/tv_userid_text"
                 app:layout_constraintTop_toBottomOf="@+id/tv_date_text" />
 
@@ -63,7 +67,8 @@
                 android:id="@+id/tv_action_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="ACTION"
+                android:text="Aksi"
+                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@+id/tv_userid_text"
                 app:layout_constraintTop_toBottomOf="@+id/tv_time_text" />
 
@@ -72,6 +77,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=": "
+                android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/tv_userid_text"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -80,6 +86,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=": "
+                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@+id/tv_1"
                 app:layout_constraintTop_toBottomOf="@+id/tv_1" />
 
@@ -88,6 +95,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=": "
+                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@+id/tv_1"
                 app:layout_constraintTop_toBottomOf="@+id/tv_2" />
 
@@ -96,6 +104,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=": "
+                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@+id/tv_1"
                 app:layout_constraintTop_toBottomOf="@+id/tv_3" />
 
